--- a/.github/workflows/master_cognitotechnologies.yml
+++ b/.github/workflows/master_cognitotechnologies.yml
@@ -30,8 +30,8 @@ jobs:
       - name: Archive build artifacts
         uses: actions/upload-artifact@v2
         with:
-          name: build-artifacts
-          path: "./build"
+          name: 'build-artifacts'
+          path: "./dist"
   deploy:
     runs-on: ubuntu-latest
     needs: build
@@ -44,14 +44,16 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: build-artifacts
-          path: "./build"
+          path: "./dist"
     
       - name: Deploy to Azure App Service 1
         uses: azure/webapps-deploy@v2
         with:
-          app-name: 'MindEase'
-          package: './build'
+          app-name: 'node-app'
+          package: './dist'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_6E8D0FCB86D24B1FB7F5BF6458E383BF }}
+
+
 #     steps:
 #       - uses: actions/checkout@v4
 
