updated app-name and slot-name values for azure

--- a/.github/workflows/master_cognitotechnologies.yml
+++ b/.github/workflows/master_cognitotechnologies.yml
@@ -49,7 +49,8 @@ jobs:
       - name: Deploy to Azure App Service 1
         uses: azure/webapps-deploy@v2
         with:
-          app-name: 'node-app'
+          app-name: 'cognitotechnologies'
+          slot-name: 'Production'
           package: './dist'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_6E8D0FCB86D24B1FB7F5BF6458E383BF }}
 
