--- a/.github/workflows/master_cognitotechnologies.yml
+++ b/.github/workflows/master_cognitotechnologies.yml
@@ -13,89 +13,89 @@ jobs:
   build:
     runs-on: windows-latest
 
+  #   steps:
+  #     - name: Checkout Repository
+  #       uses: actions/checkout@v2
+
+  #     - name: Install Dependencies
+  #       run: npm install
+  #       env:
+  #         CI: false
+
+  #     - name: Build Application
+  #       run: npm run build
+  #       env:
+  #           CI: false
+
+  #     - name: Archive build artifacts
+  #       uses: actions/upload-artifact@v3
+  #       with:
+  #         name: 'build-artifacts'
+  #         path: "./dist"
+  # deploy:
+  #   runs-on: ubuntu-latest
+  #   needs: build
+  #   environment:
+  #     name: 'Production'
+  #     url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
+
+  #   steps:
+  #     - name: Checkout code
+  #       uses: actions/checkout@v3
+    
+  #     - name: Download build artifacts
+  #       uses: actions/download-artifact@v3
+  #       with:
+  #         name: build-artifacts
+  #         path: "./dist"
+    
+  #     - name: Deploy to Azure App Service 1
+  #       uses: azure/webapps-deploy@v2
+  #       with:
+  #         app-name: 'cognitotechnologies'
+  #         slot-name: 'Production'
+  #         package: './dist'
+  #         publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_6E8D0FCB86D24B1FB7F5BF6458E383BF }}
+
+
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v2
+      - uses: actions/checkout@v4
 
-      - name: Install Dependencies
-        run: npm install
-        env:
-          CI: false
+      - name: Set up Node.js version
+        uses: actions/setup-node@v3
+        with:
+          node-version: '18.x'
 
-      - name: Build Application
-        run: npm run build
-        env:
-            CI: false
-
-      - name: Archive build artifacts
+      - name: npm install, build, and test
+        run: |
+          npm install
+          npm run build --if-present
+          npm run test --if-present
+      
+      - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
         with:
-          name: 'build-artifacts'
-          path: "./dist"
+          name: node-app
+          path: .
+
   deploy:
     runs-on: ubuntu-latest
     needs: build
     environment:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
     
-      - name: Download build artifacts
+    steps:
+      - name: Download artifact from build job
         uses: actions/download-artifact@v3
         with:
-          name: build-artifacts
-          path: "./dist"
-    
-      - name: Deploy to Azure App Service 1
+          name: node-app
+      
+      - name: 'Deploy to Azure Web App'
         uses: azure/webapps-deploy@v2
+        id: deploy-to-webapp
         with:
           app-name: 'cognitotechnologies'
           slot-name: 'Production'
-          package: './dist'
+          package: .
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_6E8D0FCB86D24B1FB7F5BF6458E383BF }}
-
-
-#     steps:
-#       - uses: actions/checkout@v4
-
-#       - name: Set up Node.js version
-#         uses: actions/setup-node@v3
-#         with:
-#           node-version: '18.x'
-
-#       - name: npm install, build, and test
-#         run: |
-#           npm install
-#           npm run build --if-present
-#           npm run test --if-present
-      
-#       - name: Upload artifact for deployment job
-#         uses: actions/upload-artifact@v3
-#         with:
-#           name: node-app
-#           path: .
-
-#   deploy:
-#     runs-on: ubuntu-latest
-#     needs: build
-#     environment:
-#       name: 'Production'
-#       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-    
-#     steps:
-#       - name: Download artifact from build job
-#         uses: actions/download-artifact@v3
-#         with:
-#           name: node-app
-      
-#       - name: 'Deploy to Azure Web App'
-#         uses: azure/webapps-deploy@v2
-#         id: deploy-to-webapp
-#         with:
-#           app-name: 'cognitotechnologies'
-#           slot-name: 'Production'
-#           package: .
-#           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_6E8D0FCB86D24B1FB7F5BF6458E383BF }}
