--- a/.github/workflows/master_cognitotechnologies.yml
+++ b/.github/workflows/master_cognitotechnologies.yml
@@ -7,7 +7,7 @@ on:
   push:
     branches:
       - master
-#   workflow_dispatch:
+  workflow_dispatch:
 
 jobs:
   build:
@@ -31,7 +31,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: 'build-artifacts'
-          path: "./dist"
+          path: "./build"
   deploy:
     runs-on: ubuntu-latest
     needs: build
@@ -47,7 +47,7 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: build-artifacts
-          path: "./dist"
+          path: "./build"
     
       - name: Deploy to Azure App Service 1
         uses: azure/webapps-deploy@v2
