--- a/.github/workflows/master_cognito-technologies.yml
+++ b/.github/workflows/master_cognito-technologies.yml
@@ -14,24 +14,24 @@ jobs:
     runs-on: windows-latest
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout Repository
+        uses: actions/checkout@v2
 
-      - name: Set up Node.js version
-        uses: actions/setup-node@v3
-        with:
-          node-version: '20.x'
+      - name: Install Dependencies
+        run: npm install
+        env:
+          CI: false
 
-      - name: npm install, build, and test
-        run: |
-          npm install
-          npm run build --if-present
-          npm run test --if-present
-      
-      - name: Upload artifact for deployment job
-        uses: actions/upload-artifact@v4
+      - name: Build Application
+        run: npm run build
+        env:
+            CI: false
+
+      - name: Archive build artifacts
+        uses: actions/upload-artifact@v2
         with:
-          name: node-app
-          path: .
+          name: 'build-artifacts'
+          path: "./build"
 
   deploy:
     runs-on: ubuntu-latest
@@ -41,16 +41,20 @@ jobs:
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
     
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+    
       - name: Download artifact from build job
-        uses: actions/download-artifact@v4
+        uses: actions/download-artifact@v2
         with:
-          name: node-app
+          name: build-artifacts
+          path: "./build"
       
       - name: 'Deploy to Azure Web App'
-        uses: azure/webapps-deploy@v3
+        uses: azure/webapps-deploy@v2
         id: deploy-to-webapp
         with:
           app-name: 'cognito-technologies'
           slot-name: 'Production'
-          package: .
+          package: './build'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_09122660F3EC49B1AB9E53B9CD571B7E }}
