provided github workflow

--- a/public/web.config
+++ b/public/web.config
@@ -7,6 +7,7 @@
         <rule name="React Routes" stopProcessing="true">
           <match url=".*" />
           <conditions logicalGrouping="MatchAll">
+            <!-- Ignore files and directories -->
             <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" />
             <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true" />
           </conditions>
@@ -14,12 +15,27 @@
         </rule>
       </rules>
     </rewrite>
-    <!-- Required for serving static files -->
+
+    <!-- Set default document to index.html -->
+    <defaultDocument>
+      <files>
+        <clear />
+        <add value="index.html" />
+      </files>
+    </defaultDocument>
+
+    <!-- Serve static content with proper MIME types -->
     <staticContent>
       <mimeMap fileExtension=".js" mimeType="application/javascript" />
       <mimeMap fileExtension=".json" mimeType="application/json" />
       <mimeMap fileExtension=".css" mimeType="text/css" />
       <mimeMap fileExtension=".html" mimeType="text/html" />
+      <mimeMap fileExtension=".svg" mimeType="image/svg+xml" />
+      <mimeMap fileExtension=".png" mimeType="image/png" />
+      <mimeMap fileExtension=".jpg" mimeType="image/jpeg" />
+      <mimeMap fileExtension=".jpeg" mimeType="image/jpeg" />
+      <mimeMap fileExtension=".gif" mimeType="image/gif" />
+      <mimeMap fileExtension=".ico" mimeType="image/x-icon" />
     </staticContent>
   </system.webServer>
 </configuration>
