--- a/public/web.config
+++ b/public/web.config
@@ -3,6 +3,16 @@
   <system.webServer>
     <rewrite>
       <rules>
+        <!-- Remove trailing slash from URL -->
+        <rule name="RemoveTrailingSlash" stopProcessing="true">
+          <match url="(.*)/$" />
+          <conditions>
+            <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true" />
+            <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" />
+          </conditions>
+          <action type="Redirect" redirectType="Permanent" url="{R:1}" />
+        </rule>
+
         <!-- Rule to handle React Router paths -->
         <rule name="React Routes" stopProcessing="true">
           <match url=".*" />
