web.config modification

--- a/public/web.config
+++ b/public/web.config
@@ -13,6 +13,11 @@
           <action type="Redirect" redirectType="Permanent" url="{R:1}" />
         </rule>
 
+        <rule name="RedirectHomeWithSlash" stopProcessing="true">
+          <match url="home/$" />
+          <action type="Redirect" url="home" redirectType="Permanent" />
+        </rule>
+
         <!-- Rule to handle React Router paths -->
         <rule name="React Routes" stopProcessing="true">
           <match url=".*" />
@@ -47,5 +52,8 @@
       <mimeMap fileExtension=".gif" mimeType="image/gif" />
       <mimeMap fileExtension=".ico" mimeType="image/x-icon" />
     </staticContent>
+  </system.webServer>
+  <system.webServer>
+    <directoryBrowse enabled="false" />
   </system.webServer>
 </configuration>
