--- a/public/web.config
+++ b/public/web.config
@@ -13,10 +13,10 @@
           <action type="Redirect" redirectType="Permanent" url="{R:1}" />
         </rule>
 
-        <rule name="RedirectHomeWithSlash" stopProcessing="true">
+        <!-- <rule name="RedirectHomeWithSlash" stopProcessing="true">
           <match url="home/$" />
           <action type="Redirect" url="home" redirectType="Permanent" />
-        </rule>
+        </rule> -->
 
         <!-- Rule to handle React Router paths -->
         <rule name="React Routes" stopProcessing="true">
@@ -55,5 +55,8 @@
   </system.webServer>
   <system.webServer>
     <directoryBrowse enabled="false" />
+  </system.webServer>
+  <system.webServer>
+    <httpErrors errorMode="Detailed" />
   </system.webServer>
 </configuration>
