--- a/public/web.config
+++ b/public/web.config
@@ -54,9 +54,9 @@
     </staticContent>
   </system.webServer>
   <system.webServer>
-    <directoryBrowse enabled="false" />
+    <directoryBrowse enabled="true" />
   </system.webServer>
-  <system.webServer>
+  <!-- <system.webServer>
     <httpErrors errorMode="Detailed" />
-  </system.webServer>
+  </system.webServer> -->
 </configuration>
