removed browser direcotry attribute

--- a/public/web.config
+++ b/public/web.config
@@ -54,7 +54,7 @@
     </staticContent>
   </system.webServer>
   <system.webServer>
-    <directoryBrowse enabled="true" />
+    <directoryBrowse enabled="false" />
   </system.webServer>
   <!-- <system.webServer>
     <httpErrors errorMode="Detailed" />
